--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Antariksha Ray</title>
+  <title>Noob golu</title>
   
   <meta name="author" content="Antariksha Ray">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,28 +19,27 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p style="text-align:center">
-                  <name>Antariksha Ray</name>
+                  <name>Ameya Hule</name>
                 </p>
-                <p>I am a senior software engineer at <a href="https://research.samsung.com/sri-b">Samsung Research Institute - Bangalore</a>, where I work on Android and Connectivity frameworks.
+                <!--p>I am a senior software engineer at <a href="https://research.samsung.com/sri-b">Samsung Research Institute - Bangalore</a>, where I work on Android and Connectivity frameworks.
                   Previously, I was a developer at <a href="https://www.sap.com/india/about/labs-india.html">SAP Labs, Bangalore</a>. I graduated from the <a href="http://www.jaduniv.edu.in/view_department.php?deptid=59">Computer Science & Engineering department</a> at <a href="http://www.jaduniv.edu.in/">Jadavpur University, Kolkata</a> in 2018.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:theantariksharay@gmail.com">Email</a> &nbsp/&nbsp
-                  <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
-                  <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
+                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/theantariksharay/">LinkedIn</a> &nbsp/&nbsp
                   <a href="https://github.com/theantariksha">Github</a>
-                </p>
+                </p-->
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/profilepic.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profilepic.jpg" class="hoverZoomLink"></a>
+                <a href="images/profilepic.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/golu.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody>
         </table>
 
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
@@ -136,7 +135,7 @@
               </p>
             </td>
           </tr>
-        </tbody></table>
+        </tbody></table> -->
       </td>
     </tr>
   </table>
